tests/fixtures/functional_patterns/positive/p63_transpose.rs
fn transpose_options(items: Vec<Option<i32>>) -> Option<Vec<i32>> {
    items.into_iter().collect()
}
