tests/fixtures/functional_patterns/negative/n09_early_return.rs
fn find_first_imperative(items: Vec<i32>) -> Option<i32> {
    for item in items {
        if item > 10 {
            return Some(item);
        }
    }
    None
}
